# transaction-tracker

./: .gitattributes  .gitignore  docker-compose.db.yaml  docker-compose.observer.yaml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  loki.config.yaml  nginx.conf  promtail.config.yaml
.github/workflows/: frontend-ci.yml  go-ci.yml
api/: main.go
api/handler/: accounts.go  extracts.go  helpers.go  helpers_test.go  messages.go  messages_test.go  movements.go  movements_test.go
api/models/: account.go  converters.go  messages.go  movements.go  response.go  route.go  server.go  transaction.go  transaction_test.go
api/repositories/: accounts_repository.go  movements_repository.go
api/routes/: accounts.go  extracts.go  gmail_routes.go  google_routes.go  messages.go  movements.go  routes.go
api/services/: google.go
cmd/api/: .env.example  Dockerfile  entrypoint.sh  main.go
cmd/tracker/: .env.example  Dockerfile  main.go
database/mongo/: client.go
document-extractor/: extract.py  extractor.go  extractor_test.go
env/: main.go
frontends/transactions-dashboard/: Dockerfile  components.json  eslint.config.mjs  middleware.ts  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vitest.config.ts
googleapi/: gmail.go  google_client.go  pubsub.go
googleapi/repositories/: context.go  (+4 more)
logger/: README.md  main.go
postgres-init/: init.sql
shared/: client.go
terraform/: main.tf  terraform.tfvars.example  vars.tf
text-classifier/: .gitignore  Dockerfile  api.py  pyproject.toml  train.py
tracker/: .env.example  main.go
(+174 files in other folders)
